minitrace-macro/tests/trace/ui/err/008-item-is-not-a-function.stderr
error: custom attribute panicked
 --> tests/trace/ui/err/008-item-is-not-a-function.rs:3:1
  |
3 | #[trace]
  | ^^^^^^^^
  |
  = help: message: An item
