minitrace-macro/tests/trace/ui/err/008-item-is-not-a-function.rs
use minitrace::trace;

#[trace]
struct S;

fn main() {}
